syntax = "proto3";

package proto.v1;

option go_package = "github.com/MatrixLabsTech/flow-event-fetcher/proto/v1";
option java_multiple_files = true;
option java_package = "proto.v1";
option java_outer_classname = "SporkProto";

import "google/protobuf/timestamp.proto";

service Spork {
  rpc QueryLatestBlockHeight(QueryLatestBlockHeightRequest) returns (QueryLatestBlockHeightResponse) {}
  rpc QueryAllEventByBlockRange(QueryAllEventByBlockRangeRequest) returns (QueryAllEventByBlockRangeResponse) {}
  // QueryAllEventByBlockRangeStream stream
  rpc QueryAllEventByBlockRangeStream(QueryAllEventByBlockRangeStreamRequest) returns (stream BlockEventsResponseEvent) {}
}

message BlockEventsResponseEvent {
    string blockId = 1;
    uint64 height = 2;
    string eventID = 3;
    int64 index = 4;
    string type = 5;
    string transactionId = 6;
    int64 transactionIndex = 7;
    google.protobuf.Timestamp timestamp = 8;
    repeated BlockEventsResponseValue values = 9;
}

message BlockEventsResponseValue {
    string name = 1;
    string value = 2;
}

message QueryLatestBlockHeightRequest {}

message QueryLatestBlockHeightResponse {
  uint64 latestBlockHeight = 1;
}

message QueryAllEventByBlockRangeRequest {
  uint64 start = 1;
  uint64 end = 2;
}

message QueryAllEventByBlockRangeStreamRequest {
  uint64 start = 1;
  uint64 end = 2;
  string stage = 3;
  string host = 4;
}

message QueryAllEventByBlockRangeResponse {
  repeated BlockEventsResponseEvent events = 1;
  repeated QueryAllEventByBlockRangeResponseErrorTransaction errorTransactions = 2;
}

message QueryAllEventByBlockRangeResponseErrorTransaction {
  string transactionId = 1;
  string error = 2;
}