syntax = "proto3";

package proto.schedule;

option go_package = "github.com/MatrixLabsTech/flow-event-fetcher/proto/schedule";
option java_multiple_files = true;
option java_package = "schedule.proto";
option java_outer_classname = "ScheduleProto";

service Schedule {
  rpc LatestBlockHeight(LatestBlockHeightReq) returns (LatestBlockHeightResp) {}
  rpc ScheduleJob(ScheduleJobReq) returns (ScheduleJobResp) {}
}

message LatestBlockHeightReq {}

message LatestBlockHeightResp {
  uint64 height = 1;
}

message ScheduleJobReq {
  repeated uint64 heights = 1;
}

message ScheduleJobResp {
  repeated FailedHeight failed = 1;
}

message FailedHeight {
  uint64 height = 1;
  repeated string errors = 2;
}

message Block {
  string id = 1;
  uint64 height = 2;
  int64 timestamp = 3;
  repeated Transaction transactions = 4;
}

message CollectionTraction {
  string id = 1;
  repeated string transactionIDS = 2;
}

message Transaction {
  string id = 1;
  int64 index = 2;
  repeated Event events = 3;
  string error = 4;
}

message Event {
  string type = 1;
  int64 EventIndex = 2;
  repeated Value values = 3;
}

message Value {
  string name = 1;
  string value = 2;
}